# LIO_SAM_6AXIS

./: Dockerfile  README.md
LIO-SAM-6AXIS/: CMakeLists.txt  README.md  package.xml
LIO-SAM-6AXIS/config/: fp_indoors.yaml  fp_outdoors.yaml  hilti_pandar.yaml  indoor_ouster128.yaml  kml_config.xml  ms_pandar.yaml  newer_college_128.yaml  outdoors_ouster128.yaml  params.yaml  params_m1600.yaml  params_ouster.yaml  params_ouster_gps.yaml  params_pandar.yaml  params_vlp.yaml  test_ouster128.yaml
LIO-SAM-6AXIS/config/doc/kitti2bag/: kitti2bag.py
LIO-SAM-6AXIS/data/: .a55033d310e4eda4239ad51283c558792c1d0925.cam  .pcd
LIO-SAM-6AXIS/data/20220216_garden_day_ref/: filtered.pcd  odom_tum.txt  optimized_odom_tum.txt  pose_graph.g2o  times.txt
LIO-SAM-6AXIS/data/20220226_campus_road_day_ref/: odom_tum.txt  optimized_odom_kitti.txt  optimized_odom_tum.txt  origin.txt  pose_graph.g2o  times.txt
LIO-SAM-6AXIS/data/20230428_hkustgz_mocap_calibration_2/: handeye_calibration_20230428_2.txt  odom_tum.txt  optimized_odom_tum.txt  pose_graph.g2o  times.txt
LIO-SAM-6AXIS/data/MCR_slow_00/: odom_tum.txt  optimized_odom_kitti.txt  optimized_odom_tum.txt  pose_graph.g2o  times.txt
LIO-SAM-6AXIS/data/campus/: odom_tum.txt  optimized_gps_trajectry.kml  optimized_odom_kitti.txt  optimized_odom_tum.txt  origin.txt  pose_graph.g2o  times.txt
LIO-SAM-6AXIS/data/hkust_campus/: odom_tum.txt  optimized_gps_trajectry.kml  optimized_odom_kitti.txt  optimized_odom_tum.txt  origin.txt  pose_graph.g2o  times.txt
LIO-SAM-6AXIS/data/leica_01_lio_sam/: odom_tum.txt  optimized_odom_tum.txt  pose_graph.g2o  times.txt
LIO-SAM-6AXIS/include/: dataSaver.h  gpsTools.hpp  utility.h
LIO-SAM-6AXIS/launch/: fp_indoors.launch  fp_outdoors.launch  hilti_pandar.launch  ouster128.launch  ouster128_indoors.launch  ouster128_outdoors.launch  pandar.launch  run.launch  test_m1600.launch  test_ouster128.launch  test_vlp16.launch
LIO-SAM-6AXIS/launch/include/: module_loam.launch  module_navsat.launch  module_robot_state_publisher.launch  module_rviz.launch
LIO-SAM-6AXIS/launch/include/config/: fp_indoors.rviz  rviz.rviz  vlp.rviz
LIO-SAM-6AXIS/scripts/: lio_loop_batch.py  ouster128_batch.py  test_scripts.py
LIO-SAM-6AXIS/src/: dataSaver.cpp  featureExtraction.cpp  imageProjection.cpp  imuPreintegration.cpp  mapOptmization.cpp  mapOptmizationGps.cpp  mapOptmization_gps.cpp  simpleGpsOdom.cpp
LIO-SAM-6AXIS/srv/: save_map.srv
README/: paper2gui&type=Date.svg+xml
doc/: adaption.md
rviz_satellite/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  plugin_description.xml
rviz_satellite/launch/: demo.gps  demo.launch  demo.rviz
rviz_satellite/src/: aerialmap_display.cpp  aerialmap_display.h  tileloader.cpp  tileloader.h
